# lf-os_amd64

./: .astylerc  .dockerignore  .gdbinit  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .ycm_extra_conf.py  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.ci  Dockerfile.gitpod  Dockerfile.llvm-ci  Doxyfile  Doxyfile.in  LICENSE  Makefile  README.md  gdbinit.in  use-branch-main
.github/: FUNDING.yml
.github/workflows/: makefile.yml
.gitlab/: llvm-ci.yml
cmake/: cmake.toolchain.in  config.cmake  helper_targets.cmake  image_contents.cmake  images.cmake  project_lf_os.cmake  project_sysroot.cmake  project_toolchain.cmake  stage_initramfs.cmake  stage_libc.cmake  stage_lowlevel.cmake  stage_stdlibs.cmake  stage_sysroot.cmake  stage_toolchain.cmake  stage_userspace.cmake  stage_userspace_libs.cmake  staging.cmake  tests.cmake  toolchain.cmake
doc/: Code_organization.md  boot.md  building.md  loader.md  mm_notes.md  mm_notes.txt  pthread.md  service-discovery.md  syscalls.md
packaging/: .gitignore  debian_control  debian_copyright  debian_postinst  preinst
packaging/CloverV2/: boot6  boot7
src/: syscall-generator.pl  syscalls.lfd  syscalls.yml
src/codegen/: codegen  cpanfile  database
src/codegen/examples/: syscalls.lfd
src/codegen/t/: 000-use.t  001-syscall-simple.t  002-syscall-doc.t  003-service-simple.t  004-service-types.t  (+3 more)
src/include/: errno.h  loader.h  message_passing.h  types.h  uuid.h
src/init/: Makefile  init  main.c  main.cxx
src/kernel/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  acpi.c  allocator.h  bitmap.h  bitset_helpers.h  bootlogo.c  bootlogo.cpp  condvar.c  condvar.cpp  condvar.h  config.h  config.h.in  cpp_runtime.cpp  efi.c  efi.h  elf.c  elf.cpp  elf.h  fbconsole.c  fbconsole.h  flexarray.c  flexarray.h  hpet.c  hpet.h  log.c  log.cpp  log.h  mm.c  mm.cpp  mm.h  mq.c  mq.cpp  mq.h  mutex.c  mutex.cpp  mutex.h  qr.c  qr.h  (+14 more)
src/kernel/allocator/: base.h  page.cpp  page.h  sized.h  typed.h
src/kernel/arch/amd64/: CMakeLists.txt  Makefile  apic.h  arch.h  bluescreen.c  bluescreen.h  bootlogo.c  cpu.h  cpuid.h  fbconsole.h  gdt.S  init.S  io.h  main.c  main.cpp  mm.c  mm.h  panic.c  panic.cpp  panic.h  pic.c  pic.cpp  pic.h  pit.c  pit.cpp  pit.h  sc.c  sc.cpp  sc.h  scheduler.c  scheduler.cpp  scheduler.h  sd.c  sd.h  start.c  string.c  usb_dbc.c  usb_dbc.h  version.c  vm.c  (+2 more)
src/kernel/arch/amd64-uefi/: Makefile  arch.h  bootlogo.c  config.h  cpu.h  elf.c  elf.h  fbconsole.c  fbconsole.h  font_sun8x16.c  gdt.asm  init.asm  kernel  main.c  mm.c  mm.h  msr.c  msr.h  pic.c  pic.h  process.h  sc.c  sc.h  scheduler.c  sd.c  start.c  stdarg.h  stdbool.h  stdint.h  string.c  string.h  vm.c  vm.h
src/kernel/arch/amd64/apic/: apic.c  apic_internals.h  io.c  legacy.c  timer.c
src/kernel/arch/amd64/memory/: context.cpp
src/kernel/cstdlib/: stdarg.h  stddef.h  string.h
src/kernel/drivers/: acpi.c  acpi.h  efi.cpp  fbconsole.c  fbconsole.cpp  fbconsole.h  font_acorn_8x8.cpp  hpet.c  hpet.cpp  hpet.h
src/kernel/memory/: context.cpp  context.h  object.h  plain_object.cpp  plain_object.h  syscalls.cpp  types.h
src/kernel/qr/: qr.c  rs.c
src/kernel/tests/: CMakeLists.txt  bluescreen.h  lfostest.h  mm.cpp  runner.cxx  test_mm.cxx  test_mq.c  test_mq.cxx  test_qr.cxx  test_sd.c  test_sd.cxx  test_slab.c  test_slab.cxx  test_string.c  test_string.cxx  test_tpa.c  test_tpa.cxx  test_xhci_dbc.c
src/kernel/tests/allocator/: page.h
src/lib/tiny-stl/: CMakeLists.txt  README.md
src/lib/tiny-stl/include/helpers/tinystl/: binary_tree  ref_count  type_index_of
src/lib/tiny-stl/include/std/: bitset  cstddef  cstdint  cstring  forward_list  functional  initializer_list  map  memory  new  optional  type_traits  utility  variant
src/lib/tiny-stl/include/std/__memory/: allocator  allocator_traits  shared_ptr
src/lib/tiny-stl/tests/: bitset.cpp  forward_list.cpp  map.cpp  shared_ptr.cpp
src/loader/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  config.h  config.h.in  elf.h  loader.c  loader.h  pxe.c  stdint.h  string.c  string.h  vm.h
src/loader/common/include/: bootenv.h  platform.h
src/runtime-tests/: CMakeLists.txt  gtest_main.cxx  hello.cxx  run.sh  syscall-stack.cxx
src/sysroot/: Makefile  Makefile.include  Makefile.lib  Makefile.src
src/userspace/: CMakeLists.txt
src/userspace/initramfs/: CMakeLists.txt  main.cpp  tarfilesystem.cpp  tarfilesystem.h
src/userspace/lib9p/example/server/: CMakeLists.txt  main.cpp
src/userspace/lib9p/lib/: CMakeLists.txt  connection.cpp  message.cpp  qid.cpp  stat.cpp  transport.cpp  wireutils.cpp
src/userspace/lib9p/lib/c/: fuse.cpp  stdlib.cpp
src/userspace/lib9p/lib/helper/: client.cpp  filesystem.cpp  server_starter.cpp
src/userspace/lib9p/lib/include/: fuse.h
src/userspace/lib9p/lib/include/9p/: connection  exception  fuse.h  message  qid  stat  transport  wireutils
src/userspace/lib9p/lib/include/9p/helper/: client  filesystem  server_starter
src/userspace/lib9p/lib/include/9p/transports/: lf_os  tcp
src/userspace/lib9p/lib/transport/: lf_os.cpp  tcp.cpp
src/userspace/lib9p/tests/: CMakeLists.txt  decode.cpp  wireutils.cpp
src/userspace/liblfos/: CMakeLists.txt
src/userspace/liblfos/include/lfos/: dlinkedlist.h  mq-router.h
src/userspace/liblfos/lib/: dlinkedlist.c  mq-router.c
src/userspace/liblfos/tests/: CMakeLists.txt  dlinkedlist.cpp  mq-router.cpp
src/userspace/term/: CMakeLists.txt  bootlogo.ans  data.inc  font.h  keyboard.c  keyboard.h  main.c  main.h  rw_hook.c
src/userspace/term/util/: CMakeLists.txt  font-compile.c
t/kernel/: Makefile  bluescreen.h  lfostest.h  slab.c  string.c  tpa.c
util/: CMakeLists.txt  Makefile  README.md  ccache-unlimited  embed.c  fatcreate.c  osprobe  vmcalc.pl
util/gdbserver-profile/: Makefile  gdbserver_handler.c  gdbserver_handler.h  gsp-syms.c  image_reader.c  image_reader.h  main.c  trace_reader.h  trace_writer.h
util/gsp/: .gitignore  LICENSE  Makefile  README.md  gdbserver_handler.c  gdbserver_handler.h  gsp-stackcollapse.pl  gsp-syms.c  gsp-trace.c  image_reader.c  trace_reader.c  trace_writer.c
(+50 files in other folders)
